# topological-phases-of-matter

./: .knowledge-base.md  .pipeline-env.sh  .vercel-url  README.md
coordination/: board.md  citation-audit.md  notation-audit.md  notation.md
coordination/abstracts/: bordism-realizability.md  lattice-eft-equivalence.md  lieb-robinson-locality.md  positivity-cstar-norms.md  spectral-gap-stability.md
docs/papers/: positivity-cstar-norms.html  spectral-gap-stability.html
lean/: CondensedPhases.lean  README.md  lake-manifest.json  lakefile.toml
lean/CondensedPhases/: Basic.lean  FiveProblems.lean  Gap.lean  Interactions.lean  PhaseMonoid.lean  Stacking.lean
papers/latex/: bordism-realizability.tex  lattice-eft-equivalence.tex  lieb-robinson-locality.tex  positivity-cstar-norms.tex  references.bib  spectral-gap-stability.tex  synthesis.tex
posts/bluesky/: bordism-realizability.md  lattice-eft-equivalence.md  lieb-robinson-locality.md  positivity-cstar-norms.md  spectral-gap-stability.md  synthesis.md
posts/facebook/: bordism-realizability.md  lattice-eft-equivalence.md  lieb-robinson-locality.md  positivity-cstar-norms.md  spectral-gap-stability.md  synthesis.md
posts/linkedin/: bordism-realizability.md  lattice-eft-equivalence.md  lieb-robinson-locality.md  positivity-cstar-norms.md  spectral-gap-stability.md  synthesis.md
posts/twitter/: bordism-realizability.md  lattice-eft-equivalence.md  lieb-robinson-locality.md  positivity-cstar-norms.md  spectral-gap-stability.md  synthesis.md
reviews/: bordism-realizability-codex-review-round-1.md  bordism-realizability-codex-review-round-2.md  bordism-realizability-haskell-codex-review-round-1.md  bordism-realizability-haskell-codex-review-round-2.md  bordism-realizability-haskell-codex-review-round-3.md  bordism-realizability-haskell-codex-review.md  bordism-realizability-review-round-1.md  bordism-realizability-review-round-2.md  bordism-realizability-review.md  lattice-eft-equivalence-codex-review-round-1.md  lattice-eft-equivalence-codex-review-round-2.md  lattice-eft-equivalence-codex-review-round-3.md  lattice-eft-equivalence-codex-review.md  lattice-eft-equivalence-haskell-codex-review-round-1.md  lattice-eft-equivalence-haskell-codex-review-round-2.md  lattice-eft-equivalence-haskell-codex-review.md  lattice-eft-equivalence-review-round-1.md  lattice-eft-equivalence-review-round-2.md  lattice-eft-equivalence-review.md  lieb-robinson-locality-codex-review-round-1.md  lieb-robinson-locality-codex-review-round-2.md  lieb-robinson-locality-haskell-codex-review-round-1.md  lieb-robinson-locality-haskell-codex-review-round-2.md  lieb-robinson-locality-haskell-codex-review.md  lieb-robinson-locality-review.md  positivity-cstar-norms-codex-review-round-1.md  positivity-cstar-norms-codex-review-round-2.md  positivity-cstar-norms-codex-review-round-3.md  positivity-cstar-norms-codex-review.md  positivity-cstar-norms-haskell-codex-review-round-1.md  positivity-cstar-norms-haskell-codex-review-round-2.md  positivity-cstar-norms-haskell-codex-review-round-3.md  positivity-cstar-norms-haskell-codex-review.md  positivity-cstar-norms-review-round-1.md  positivity-cstar-norms-review.md  spectral-gap-stability-codex-review-round-1.md  spectral-gap-stability-codex-review-round-2.md  spectral-gap-stability-codex-review.md  spectral-gap-stability-haskell-codex-review-round-1.md  spectral-gap-stability-haskell-codex-review-round-2.md  (+9 more)
reviews/panel/: bordism-realizability-citation.json  bordism-realizability-meta_reviewer.json  bordism-realizability-novelty.json  bordism-realizability-reproducibility.json  bordism-realizability-summary.json  bordism-realizability-technical_correctness.json  lattice-eft-equivalence-citation.json  lattice-eft-equivalence-meta_reviewer.json  lattice-eft-equivalence-novelty.json  lattice-eft-equivalence-reproducibility.json  lattice-eft-equivalence-summary.json  lattice-eft-equivalence-technical_correctness.json  lieb-robinson-locality-citation.json  lieb-robinson-locality-meta_reviewer.json  lieb-robinson-locality-novelty.json  lieb-robinson-locality-reproducibility.json  lieb-robinson-locality-summary.json  lieb-robinson-locality-technical_correctness.json  positivity-cstar-norms-citation.json  positivity-cstar-norms-meta_reviewer.json  positivity-cstar-norms-novelty.json  positivity-cstar-norms-reproducibility.json  positivity-cstar-norms-summary.json  positivity-cstar-norms-technical_correctness.json  spectral-gap-stability-citation.json  spectral-gap-stability-meta_reviewer.json  spectral-gap-stability-novelty.json  spectral-gap-stability-reproducibility.json  spectral-gap-stability-summary.json  spectral-gap-stability-technical_correctness.json  synthesis-citation.json  synthesis-meta_reviewer.json  synthesis-novelty.json  synthesis-reproducibility.json  synthesis-summary.json  synthesis-technical_correctness.json
scripts/: latex2html.py  numeric.csl  paper-template.html  papers-config.json
src/bordism-realizability/: Kitaev.hs  Main.hs  Proofs.hs  Properties.hs  Stabilizer.hs  bordism-realizability.cabal
src/lattice-eft-equivalence/: Main.hs  Monoid.hs  Proofs.hs  Properties.hs  TenfoldWay.hs  lattice-eft-equivalence.cabal
src/lieb-robinson-locality/: FFunction.hs  Ising.hs  LinAlg.hs  Main.hs  Proofs.hs  Properties.hs  Test.hs  lieb-robinson-locality.cabal
src/positivity-cstar-norms/: Core.hs  CrossedProduct.hs  GNS.hs  Main.hs  Proofs.hs  Properties.hs  positivity-cstar-norms.cabal
src/spectral-gap-stability/: Main.hs  Proofs.hs  Properties.hs  TFIM.hs  TestMain.hs  spectral-gap-stability.cabal
website/: .gitignore  package-lock.json  package.json  papers.json  theme.json  vercel.json
website/app/: globals.css  layout.tsx  page.tsx
website/app/pipeline/: page.tsx
website/components/: PaperCard.tsx  PaperContent.tsx  TableOfContents.tsx
website/content/: pipeline-stats.json
website/content/papers/: bordism-realizability.html  (+3 more)
website/lib/: content.ts  macros.ts  papers.ts  pipeline-stats.ts  render-math.ts
website/scripts/: copy-assets.mjs  gen-pipeline-stats.mjs
(+1 files in other folders)
